--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.bytedeco.javacpp-presets/ffmpeg-platform -->
-<!--        <dependency>-->
-<!--            <groupId>org.bytedeco.javacpp-presets</groupId>-->
-<!--            <artifactId>ffmpeg-platform</artifactId>-->
-<!--            <version>4.1-1.4.4</version>-->
-<!--        </dependency>-->
         <!-- https://mvnrepository.com/artifact/org.bytedeco/javacv-platform -->
         <dependency>
             <groupId>org.bytedeco</groupId>
@@ -30,12 +24,18 @@
             <version>1.5.7</version>
         </dependency>
 
-
         <!-- https://mvnrepository.com/artifact/org.bytedeco/ffmpeg -->
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>ffmpeg</artifactId>
             <version>5.0-1.5.7</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
         </dependency>
 
         <dependency>
